--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,7 @@ body, html {
 
 .nav a {
   color: black;
-  font-size: 1em;
+  font-size: 1.5em;
   text-decoration: none;
   padding: 0 5px 0 5px;
 }
@@ -72,6 +72,30 @@ body, html {
 .blog-preview {
   width: 100%;
   margin: 10px;
+}
+
+.blog-preview {
+  padding: 10px;
+  border: 2px solid black;
+}
+
+.card {
+  display: inline-block;
+  width: 250px;;
+  padding: 2px 16px;
+  margin: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.blog-preview a {
+ text-align: right;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .page-footer {
